fix: preserve base path slug in 404 fallback

--- a/public/404.html
+++ b/public/404.html
@@ -17,7 +17,13 @@
     <script>
       (function () {
         var placeholder = "__BASE_PATH__";
-        var basePath = placeholder === "__BASE_PATH__" ? "" : placeholder;
+        var basePath = placeholder;
+        if (basePath === "__BASE_PATH__") {
+          basePath = "";
+        } else {
+          var trimmedBasePath = basePath.trim();
+          basePath = trimmedBasePath === "" ? "" : trimmedBasePath;
+        }
         if (basePath && basePath !== "/") {
           basePath = "/" + basePath.replace(/^\/+|\/+$/g, "");
         }
