--- a/public/404.html
+++ b/public/404.html
@@ -31,7 +31,7 @@
           basePath = "";
         }
         var storagePlaceholder = "__GITHUB_PAGES_REDIRECT_STORAGE_KEY__";
-        var defaultStorageKey = "noxis-planner:gh-pages:redirect";
+        var defaultStorageKey = "noxis-planner:v1:gh-pages:redirect";
         var storageKey = storagePlaceholder;
         if (!storageKey || storageKey === "__GITHUB_PAGES_REDIRECT_STORAGE_KEY__") {
           storageKey = defaultStorageKey;
