fix: keep GitHub Pages redirects on repo base path

--- a/public/404.html
+++ b/public/404.html
@@ -16,9 +16,10 @@
     </main>
     <script>
       (function () {
-        var placeholder = "__BASE_PATH__";
-        var basePath = placeholder;
-        if (basePath === "__BASE_PATH__") {
+        var BASE_PLACEHOLDER_SENTINEL = "__" + "BASE_PATH__";
+        var basePlaceholder = "__BASE_PATH__";
+        var basePath = basePlaceholder;
+        if (!basePath || basePath === BASE_PLACEHOLDER_SENTINEL) {
           basePath = "";
         } else {
           var trimmedBasePath = basePath.trim();
