--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
       <p>This route falls back to the Planner single-page app.</p>
       <p>
         If the redirect does not start automatically,
-        <a id="pages-redirect-link" href="Planner/index.html">return to Planner</a>.
+        <a id="pages-redirect-link" href="/Planner/index.html">return to Planner</a>.
       </p>
     </main>
     <script>
@@ -34,7 +34,7 @@
           storageKey = storageKey.trim() || defaultStorageKey;
         }
 
-        var target = (basePath ? basePath + "/" : "") + "index.html";
+        var target = "/" + (basePath ? basePath + "/" : "") + "index.html";
         var search = window.location.search || "";
         var hash = window.location.hash || "";
         var originalLocation = window.location.pathname + search + hash;
