--- a/404.html
+++ b/404.html
@@ -31,10 +31,10 @@
         if (basePath === "/") {
           basePath = "";
         }
-        var storagePlaceholder = "noxis-planner:v1:gh-pages:redirect";
-        var defaultStorageKey = "noxis-planner:v1:gh-pages:redirect";
+        var storagePlaceholder = "noxis-planner:v1:main:redirect";
+        var defaultStorageKey = "noxis-planner:v1:main:redirect";
         var storageKey = storagePlaceholder;
-        if (!storageKey || storageKey === "noxis-planner:v1:gh-pages:redirect") {
+        if (!storageKey || storageKey === "noxis-planner:v1:main:redirect") {
           storageKey = defaultStorageKey;
         } else {
           storageKey = storageKey.trim() || defaultStorageKey;
